# cmake_qt6_template

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.A5E77DB447462666.idx
src/: main.cpp  main.qml
